@@ -1,0 +1,4 @@
+@chr1	ignored
+2	more	fields	etc
+Y	etc
+UNKNOWN
